2017-08-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/79790
	* g++.dg/cpp1z/class-deduction43.C: New.

2017-08-04  Yury Gribov  <tetra2005@gmail.com>

	PR tree-optimization/57371
	* c-c++-common/pr57371-1.c: New test.
	* c-c++-common/pr57371-2.c: New test.
	* c-c++-common/pr57371-3.c: New test.
	* c-c++-common/pr57371-4.c: New test.
	* gcc.dg/pr57371-5.c: New test.

2017-08-04  Carl Love  <cel@us.ibm.com>

	* gcc.target/powerpc/builtins-3.c: Remove ISA 3.0 word variant
	builtin test cases for vec_mule, and vec_mulo.
	* gcc.target/powerpc/builtins-3-p8.c: Add ISA 3.0 word variant
	builtin test cases for vec_mule, and vec_mulo.

2017-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81590
	* gcc.target/i386/avx512-check.h: New file.
	* gcc.target/i386/avx5124fmaps-check.h: Removed.
	* gcc.target/i386/avx5124vnniw-check.h: Likewise.
	* gcc.target/i386/avx512cd-check.h: Likewise.
	* gcc.target/i386/avx512ifma-check.h: Likewise.
	* gcc.target/i386/avx512vbmi-check.h: Likewise.
	* gcc.target/i386/avx512vpopcntdq-check.h: Likewise.
	* gcc.target/i386/avx512bw-check.h: Rewrite.
	* gcc.target/i386/avx512dq-check.h: Likewise.
	* gcc.target/i386/avx512er-check.h: Likewise.
	* gcc.target/i386/avx512f-check.h: Likewise.
	* gcc.target/i386/avx512vl-check.h: Likewise.
	* gcc.target/i386/avx512f-helper.h: Include "avx512-check.h"
	only.
	(test_512): Removed.
	(avx512*_test): Likewise.
	* gcc.target/i386/avx512f-pr71559.c (TEST): Undef.

2017-08-04  Marek Polacek  <polacek@redhat.com>

	PR middle-end/81695
	* gcc.dg/pr81695.c: New test.

2017-08-04  Richard Sandiford  <richard.sandiford@linaro.org>

	PR tree-optimization/81136
	* gcc.dg/vect/pr81136.c: Add scan test.

2017-08-04  Richard Sandiford  <richard.sandiford@linaro.org>

	* gcc.dg/vect/vect-alias-check-3.c: New test.
	* gcc.dg/vect/vect-alias-check-4.c: Likewise.
	* gcc.dg/vect/vect-alias-check-5.c: Likewise.

2017-08-04  Richard Biener  <rguenther@suse.de>

	PR middle-end/81705