@@ -1,3 +1,12 @@
+2017-08-06  Tom de Vries  <tom@codesourcery.com>
+
+	PR testsuite/81731
+	* gcc.dg/torture/pr78218.c (struct v): New type, factored type out of
+	variable 'a' definition.
+	(b): Remove unused variable.
+	(gp): New variable.
+	(check): Add parameter corresponding to call in main, and handle.
+
 2017-08-04  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/79790
